--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>NMC</title>
     <link rel = "stylesheet" type = "text/css" href = "main.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=IBM+Plex+Sans:ital@0;1&display=swap" rel="stylesheet">
   </head>
   <body>
-  
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
 
-  welcome to <b style="color: blue;">blue</b> media club
-  </body>
+    <div class="container">
+      <p>welcome to <b style="color: blue; font-family: 'IBM Plex Mono', sans-serif;">blue</b> media club</p>
+      <p class="h1">asdf;lakjlk;j</p>
+  </div>
+</body>
 </html>
