Create basic styling + header

--- a/index.html
+++ b/index.html
@@ -4,17 +4,36 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>NMC</title>
+    <link rel = "stylesheet" type = "text/css" href = "reset.css" />
     <link rel = "stylesheet" type = "text/css" href = "main.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=IBM+Plex+Sans:ital@0;1&display=swap" rel="stylesheet">
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
 
-    <div class="container">
-      <p>welcome to <b style="color: blue; font-family: 'IBM Plex Mono', sans-serif;">blue</b> media club</p>
-      <p class="h1">asdf;lakjlk;j</p>
+    <div class="nav">
+      <div class="nav__logo">NMC</div>
+      <ul class="nav__linkholder">
+        <li class="nav__linkholder__link"><a href="">Join Us</a></li>
+        <li class="nav__linkholder__link"><a href="">Events</a></li>
+        <li class="nav__linkholder__link"><a href="">Community</a></li>
+        <li class="nav__linkholder__link"><a href="">Shop</a></li>
+        <li class="nav__linkholder__link"><a href="">Mentors</a></li>
+        <li class="nav__linkholder__link"><a href="">Contact</a></li>
+      </ul>
+    </div>
+
+    <div id="container">
+      
+      <h1 id="welcome">Welcome to</h1>
+      <div id="title"><span style="font-family: terminal-grotesque-open, sans-serif">N</span>ew <span style="font-family: terminal-grotesque-open">M</span>edia <span style="font-family: terminal-grotesque-open">C</span>lub</div>
+      <p id="intro">What up? We're three cool guys who are looking for other cool guys who want to hang out in our party mansion. Nothing sexual.</p>
+      <p id="join">JOIN US For our next meeting</p>
+
+  
   </div>
 </body>
 </html>
