--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>NMC</title>
     <link rel = "stylesheet" type = "text/css" href = "reset.css" />
     <link rel = "stylesheet" type = "text/css" href = "main.css" />
+    <link rel = "stylesheet" type = "text/css" href = "nav.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=IBM+Plex+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -24,14 +25,14 @@
     </script>
 
     <div class="nav">
-      <div class="nav__logo">NMC</div>
+      <a class="nav__logo" href="./index.html">NMC</a>
       <ul class="nav__linkholder">
-        <li class="nav__linkholder__link"><a href="">Join Us</a></li>
-        <li class="nav__linkholder__link"><a href="">Events</a></li>
-        <li class="nav__linkholder__link"><a href="">Community</a></li>
-        <li class="nav__linkholder__link"><a href="">Shop</a></li>
-        <li class="nav__linkholder__link"><a href="">Mentors</a></li>
-        <li class="nav__linkholder__link"><a href="">Contact</a></li>
+        <li class="nav__linkholder__link"><a class="nav__link" href="">Join Us</a></li>
+        <li class="nav__linkholder__link"><a class="nav__link" href="">Events</a></li>
+        <li class="nav__linkholder__link"><a class="nav__link" href="">Community</a></li>
+        <li class="nav__linkholder__link"><a class="nav__link" href="">Shop</a></li>
+        <li class="nav__linkholder__link"><a class="nav__link" href="">Mentors</a></li>
+        <li class="nav__linkholder__link"><a class="nav__link" href="./contact.html">Contact</a></li>
       </ul>
     </div>
     
@@ -86,9 +87,17 @@
   </section>
 
   <div id="image-carousel" data-aos="fade-up" data-aos-delay="200">
-    <!-- <img id="img1" src="media/hasque.jpg">
-    <img id="img2" src="media/ben.jpg"> -->
-    <img id="banner" src="media/banner.png">
+
+    <div id="slider-container">
+      <div class="slider">
+        <span><img src="/media/banner-1.jpg"></img></span>
+        <span><img src="/media/banner-2.jpg"></img></span>
+        <span><img src="/media/banner-3.jpg"></img></span>
+        <span><img src="/media/banner-4.jpg"></img></span>
+        <span><img src="/media/banner-5.jpg"></img></span>
+        <span><img src="/media/banner-6.jpg"></img></span>
+      </div>
+    </div>
   </div>
 
   
@@ -133,10 +142,6 @@
       <div class="row-segment" id="row8"></div>
       <div class="row-segment" id="row9"></div>
       <div class="row-segment" id="row10"></div>
-      <div class="row-segment" id="row11"></div>
-      <div class="row-segment" id="row12"></div>
-      <div class="row-segment" id="row13"></div>
-      <div class="row-segment" id="row14"></div>
     </div>
 
 
@@ -227,9 +232,10 @@
     <script src="/src/box.js" type="text/javascript"></script>
     <script src="/src/star.js" type="text/javascript"></script>
     <!-- <script src="/src/clickdrag.js" type="text/javascript"></script> -->
-    <script src="/src/sticker.js" defer type="text/javascript"></script>
+    <!-- <script src="/src/sticker.js" defer type="text/javascript"></script> -->
     <script src="/src/Line.js" defer type="text/javascript"></script>
     <script src="/src/drawing.js" defer type="text/javascript"></script>
     <script src="/src/svgDraw.js" type="text/javascript"></script>
+    <script src="/src/nav.js" type="text/javascript"></script>
 </body>
 </html>
