--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <div class="overlay" id="overlay">
       <ul class="nav__linkholder">
         <li class="nav__linkholder__link"><a class="nav__link" href="">Join Us</a></li>
-        <li class="nav__linkholder__link"><a class="nav__link" href="">Events</a></li>
+        <li class="nav__linkholder__link"><a class="nav__link" href="./events.html">Events</a></li>
         <li class="nav__linkholder__link"><a class="nav__link" href="">Community</a></li>
         <li class="nav__linkholder__link"><a class="nav__link" href="">Shop</a></li>
         <li class="nav__linkholder__link"><a class="nav__link" href="">Mentors</a></li>
