Further CSS additions and article creation

--- a/nav.html
+++ b/nav.html
@@ -16,9 +16,9 @@
     <ul class="nav__linkholder">
       <li class="nav__linkholder__link"><a class="nav__link" href="">Join Us</a></li>
       <li class="nav__linkholder__link"><a class="nav__link" href="./events.html">Events</a></li>
-      <li class="nav__linkholder__link"><a class="nav__link" href="">Community</a></li>
+      <!-- <li class="nav__linkholder__link"><a class="nav__link" href="">Community</a></li> -->
       <li class="nav__linkholder__link"><a class="nav__link" href="">Shop</a></li>
-      <li class="nav__linkholder__link"><a class="nav__link" href="">Mentors</a></li>
+      <!-- <li class="nav__linkholder__link"><a class="nav__link" href="">Mentors</a></li> -->
       <li class="nav__linkholder__link"><a class="nav__link" href="./contact.html">Contact</a></li>
     </ul>
   </div>
