--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
 
-  <!-- <style>
+  <style>
     body {cursor: url('https://raw.githubusercontent.com/coob113/fancy-cursors/master/pixelated1.png'), auto !important;}
-    a, button, #mascot {cursor: url('https://raw.githubusercontent.com/coob113/fancy-cursors/master/pixelated2.png') 23 0, auto !important;}
-    </style> -->
+    a, button, #mascot, #image-carousel, #sticker-hero, #nav, .merch-card  {cursor: url('https://raw.githubusercontent.com/coob113/fancy-cursors/master/pixelated2.png') 23 0, auto !important;}
+    </style>
   <body data-scroll-container>
 
     <!--Navigation bar-->
@@ -35,6 +35,7 @@
       <h2 id="welcome">Welcome to</h2>
       <div id="title"><span style="font-family: terminal-grotesque-open, sans-serif">N</span>ew <span style="font-family: terminal-grotesque-open">M</span>edia <span style="font-family: terminal-grotesque-open">C</span>lub</div>
       <p id="intro">New Media Club is a student run organization at RIT focused on holding events for those interested in New Media and bringing students, professors and alumni together outside of a classroom setting.</p>
+      <p id="draw-hint">pssst... </br> try clicking and dragging to draw ;)</p>
       </section>
 
     <section id="event-section" class="container">
@@ -74,13 +75,13 @@
         <p id="event-date">Wednesday, Sept 6th 2021</p>
         <h2 id="event-title">Summer Recap Night</h2>
         <p id="event-bio">Summer recap night is to recap summer. Be there. Pizza will be provided. Club Members only please. Filler text here more text maximum text.</p>
-        <button id="event-button">More Events →</button>
+        <a href="https://www.facebook.com/groups/6190376189"><button id="event-button">More Events →</button></a>
       </div>
   </section>
 
   <section id="who-section" class="container">
 
-    <h1 id="who" class="mbs">Who we are -</h1 >
+    <h1 id="who" class="mbs">Who<br>we are</h1 >
     <p id="who-bio">We are designers, developers, artists, and creators at the Rochester Institute of Technology in Rochester, NY. We strongly believe in including all in our pursuit for better design.</p>
   
 
@@ -88,7 +89,7 @@
     <div id="scroll-manager"  data-scroll  data-scroll-target="#who-scroll-container"> -->
 
     
-  <div id="image-carousel">
+  <div id="image-carousel" class="mbs">
     <div id="slider-container">
       <div class="slider">
         <span><div class="img-container"><img src="/media/banner-2.jpg"></img></div></span>
@@ -105,7 +106,7 @@
   
  
   
-  <section class="container" id="sticker-section">
+  <section class="container mbl" id="sticker-section">
     <!-- <div id="stickerCanvas"></div> -->
     <!-- <div id="matterCanvas"></div> -->
     <!-- <div id="matterContainer">
@@ -158,7 +159,7 @@
       <img src="media/mentor-arrow.png" id="mentor-arrow">
       <img src="media/mentee-shape.png" class="mentee-rotate" id="mentee-shape">
       <img src="media/mentee-arrow.png" id="mentee-arrow">
-    <div id="mentor-bg-scene">
+    <div id="mentor-bg-scene" class="mbs">
         <img src="media/mentor-bg-1.png" data-depth="0.1" id="mentor-bg-1">
         <img src="media/mentor-bg-2.png" data-depth="0.2" id="mentor-bg-2">
     </div>
