--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 
   <style>
     body {cursor: url('https://raw.githubusercontent.com/coob113/fancy-cursors/master/pixelated1.png'), auto !important;}
@@ -163,6 +164,10 @@
         <img src="media/mentor-bg-1.png" data-depth="0.1" id="mentor-bg-1">
         <img src="media/mentor-bg-2.png" data-depth="0.2" id="mentor-bg-2">
     </div>
+    <script>
+        var scene = document.getElementById('mentor-bg-scene');
+        var parallaxInstance = new Parallax(scene);
+    </script>
   <!-- </div> -->
     <h1 id="mentor" class="mbs">Mentorship</h1>
     <p id="mentor-desc">One of the main goals of New Media Club is to provide opportunities for mentorship, which strengthens our community and reinforces our bonds with our large and growing network of alumni. We create mentorship groups yearly so that our students can get to know those from different backgrounds and year levels.</p>
@@ -179,7 +184,7 @@
     <h4 id="community-label" class="mbs">ARTICLE</h3>
     <h1 id="community-title" class="mbs">Creating a New New Media Club</h3>
     <p class="mbs">In case you couldn't tell, we rebranded! Check out  deep dive into the personality and specifics of our new look and feel.</p>
-    <button id="read-more-button">Read More →</button>
+    <a href="articles/nmcrebrand.html"><button id="read-more-button">Read More →</button></a>
   </div>
   
 </section>
@@ -211,7 +216,7 @@
       
     </span>
   </div>
-  <button id="merch-button">Let's Shop →</button>
+  <a href="https://campusgroups.rit.edu//store?store_id=338" target="_blank" rel="noopener noreferrer" id="merch-button"><button >Let's Shop →</button></a>
 </section>
 
 <section class="container">
@@ -277,7 +282,6 @@
     <script src="/src/decomp.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.15.0/matter.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.15.0/matter.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <script type="module" src="/src/scrollbooster.js"></script>
