--- a/nav.html
+++ b/nav.html
@@ -6,20 +6,58 @@
   </a>
   <script>
         $('#toggle').click(function() {
-        $(this).toggleClass('active');
-        $(".hero-text span").toggle();
-        $('#overlay').toggleClass('open');
-        $('body').toggleClass('noscroll')
+          $(this).toggleClass('active');
+          $(".hero-text span").toggle();
+          $('#overlay').toggleClass('open');
+          $('body').toggleClass('noscroll')
     });
   </script>
     <div class="overlay" id="overlay">
+      <div class="overlay-grid">
     <ul class="nav__linkholder">
-      <li class="nav__linkholder__link"><a class="nav__link" href="">Join Us</a></li>
-      <li class="nav__linkholder__link"><a class="nav__link" href="./events.html">Events</a></li>
+      <li class="nav__linkholder__link"><a class="nav__link" href="https://www.facebook.com/groups/6190376189" target="_blank" rel="noopener noreferrer">Join Us</a></li>
+      <li class="nav__linkholder__link"><a class="nav__link" href="https://www.facebook.com/groups/6190376189" target="_blank" rel="noopener noreferrer">Events</a></li>
       <!-- <li class="nav__linkholder__link"><a class="nav__link" href="">Community</a></li> -->
-      <li class="nav__linkholder__link"><a class="nav__link" href="">Shop</a></li>
+      <li class="nav__linkholder__link"><a class="nav__link" href="https://campusgroups.rit.edu//store?store_id=338" target="_blank" rel="noopener noreferrer">Shop</a></li>
       <!-- <li class="nav__linkholder__link"><a class="nav__link" href="">Mentors</a></li> -->
       <li class="nav__linkholder__link"><a class="nav__link" href="./contact.html">Contact</a></li>
     </ul>
-  </div>
+    <img src="media/bernie.gif" id="join-img">
+    <img src="media/party.gif" id="events-img">
+    <img src="media/shop.gif" id="shop-img">
+    <img src="media/phone.gif" id="contact-img">
+    <script>
+      // join hover
+      $('.overlay ul li:nth-child(1)').hover(
+        function(){
+          $('#join-img').addClass('visible');
+      }, function(){
+        $('#join-img').removeClass('visible');
+      });
+
+      // events hover
+      $('.overlay ul li:nth-child(2)').hover(
+        function(){
+          $('#events-img').addClass('visible');
+      }, function(){
+        $('#events-img').removeClass('visible');
+      });
+
+      // shop hover
+      $('.overlay ul li:nth-child(3)').hover(
+        function(){
+          $('#shop-img').addClass('visible');
+      }, function(){
+        $('#shop-img').removeClass('visible');
+      });
+
+      // contact hover
+      $('.overlay ul li:nth-child(4)').hover(
+        function(){
+          $('#contact-img').addClass('visible');
+      }, function(){
+        $('#contact-img').removeClass('visible');
+      });
+    </script>
+    </div>
   </div>
