Update navigation & article

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <style>
     body {cursor: url('https://raw.githubusercontent.com/coob113/fancy-cursors/master/pixelated1.png'), auto !important;}
-    a, button, #mascot, #image-carousel, #sticker-hero, #nav, .merch-card  {cursor: url('https://raw.githubusercontent.com/coob113/fancy-cursors/master/pixelated2.png') 23 0, auto !important;}
+    a, button, #mascot, #image-carousel, #sticker-hero, #nav, .merch-card, #community-image  {cursor: url('https://raw.githubusercontent.com/coob113/fancy-cursors/master/pixelated2.png') 23 0, auto !important;}
     </style>
   <body data-scroll-container>
 
@@ -94,8 +94,9 @@
     <div id="slider-container">
       <div class="slider">
         <span><div class="img-container"><img src="/media/banner-2.jpg"></img></div></span>
-        <span><div class="img-container"><img src="/media/banner-3.jpg"></img></div></span>
+        <span><div class="img-container"><img src="/media/banner-7.jpg"></img></div></span>
         <span><div class="img-container"><img src="/media/banner-4.jpg"></img></div></span>
+        <span><div class="img-container"><img src="/media/banner-8.jpeg"></img></div></span>
         <span><div class="img-container"><img src="/media/banner-5.jpg"></img></div></span>
         <span><div class="img-container"><img src="/media/banner-6.jpg"></img></div></span>
         <span><div class="img-container"><img src="/media/banner-1.jpg"></img></div></span>
@@ -177,7 +178,7 @@
   </section>
 
 
-<section id="community-section" class="container mbl">
+<section id="community-section" class="container mbm">
   <!-- <h1 id="community" class="mbs">Community Highlight</h1> -->
   <div id="community-image"></div>
   <div id="community-desc">
@@ -190,9 +191,9 @@
 </section>
 
 
-<section id="merch-section" class="container mbl">
+<section id="merch-section" class="container mbm">
   <!-- <img src="media/tshirt.png" id="merc-image"> -->
-<div id="merch-wrapper">
+<div id="merch-wrapper" class="mbm">
     <h1 id="merch-label">Merch</h1>
     <p id="merch-desc">Support our club through our web store. We offer stickers, t-shirts and other NMC swag for you to rep in the lab or the real world. Thank you!</p>
 </div>
