Update merch section

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   </section>
 
   
-  <section id="mentor-section" class="container mbl">
+  <section id="mentor-section" class="container mbm">
     
     <!-- <img id="mentor-img" src="media/mentorship.png"> -->
     <!-- <div class="mentor-container"> -->
