--- a/contact.html
+++ b/contact.html
@@ -42,27 +42,27 @@
     <section class="container eboard-contact-container">
         <div class="eboard-person-container ">
             <img class="eboard-profilepic rotate" src="media/caleb-icon.png" alt="profile picture of Caleb Ng">
-            <p class="eboard-name">Caleb Ng</p>
+            <p class="eboard-name">Mary Tannian</p>
             <p class ="eboard-title">President</p>
         </div>
         <div class="eboard-person-container">
           <img class="eboard-profilepic rotate" src="media/mary-icon.png" alt="profile picture of Caleb Ng">
-          <p class="eboard-name">Mary Tannian</p>
+          <p class="eboard-name">Luke Chen</p>
           <p class ="eboard-title">Vice President</p>
       </div>
       <div class="eboard-person-container">
         <img class="eboard-profilepic rotate" src="media/liza-icon.png" alt="profile picture of Caleb Ng">
-        <p class="eboard-name">Liza Comley</p>
+        <p class="eboard-name">Kelly Jin</p>
         <p class ="eboard-title">Treasurer</p>
     </div>
     <div class="eboard-person-container">
       <img class="eboard-profilepic rotate" src="media/will-icon.png" alt="profile picture of Caleb Ng">
-      <p class="eboard-name">Will McCloskey</p>
+      <p class="eboard-name">Sarah Saboori</p>
       <p class ="eboard-title">Webmaster</p>
   </div>
   <div class="eboard-person-container">
     <img class="eboard-profilepic rotate" src="media/jane-icon.png" alt="profile picture of Caleb Ng">
-    <p class="eboard-name">Jane Brennan</p>
+    <p class="eboard-name">Michelle Passe</p>
     <p class ="eboard-title">Content Creator</p>
 </div>
         
